src/test/ui/asm/naked-functions.stderr
error: asm with the `pure` option must have at least one output
  --> $DIR/naked-functions.rs:135:14
   |
LL |     asm!("", options(readonly, nostack), options(pure));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-functions.rs:22:5
   |
LL |     mut a: u32,
   |     ^^^^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-functions.rs:24:5
   |
LL |     &b: &i32,
   |     ^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-functions.rs:26:6
   |
LL |     (None | Some(_)): Option<std::ptr::NonNull<u8>>,
   |      ^^^^^^^^^^^^^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-functions.rs:28:5
   |
LL |     P { x, y }: P,
   |     ^^^^^^^^^^

error: referencing function parameters is not allowed in naked functions
  --> $DIR/naked-functions.rs:38:5
   |
LL |     a + 1
   |     ^
   |
   = help: follow the calling convention in asm block to use parameters

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:35:1
   |
LL | / pub unsafe extern "C" fn inc(a: u32) -> u32 {
LL | |
LL | |
LL | |     a + 1
   | |     ----- non-asm is unsupported in naked functions
LL | |
LL | | }
   | |_^
   |
   = note: `#[warn(unsupported_naked_functions)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

error: referencing function parameters is not allowed in naked functions
  --> $DIR/naked-functions.rs:44:31
   |
LL |     asm!("/* {0} */", in(reg) a, options(noreturn));
   |                               ^
   |
   = help: follow the calling convention in asm block to use parameters

warning: only `const` and `sym` operands are supported in naked functions
  --> $DIR/naked-functions.rs:44:23
   |
LL |     asm!("/* {0} */", in(reg) a, options(noreturn));
   |                       ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:51:1
   |
LL | / pub unsafe extern "C" fn inc_closure(a: u32) -> u32 {
LL | |
LL | |
LL | |     (|| a + 1)()
   | |     ------------ non-asm is unsupported in naked functions
LL | | }
   | |_^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: only `const` and `sym` operands are supported in naked functions
  --> $DIR/naked-functions.rs:71:10
   |
LL |          in(reg) a,
   |          ^^^^^^^^^
...
LL |          inlateout(reg) b,
   |          ^^^^^^^^^^^^^^^^
LL |          inout(reg) c,
   |          ^^^^^^^^^^^^
LL |          lateout(reg) d,
   |          ^^^^^^^^^^^^^^
LL |          out(reg) e,
   |          ^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm in naked functions must use `noreturn` option
  --> $DIR/naked-functions.rs:68:5
   |
LL | /     asm!("/* {0} {1} {2} {3} {4} {5} {6} */",
LL | |
LL | |
LL | |          in(reg) a,
...  |
LL | |          sym G,
LL | |     );
   | |_____^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:58:1
   |
LL | / pub unsafe extern "C" fn unsupported_operands() {
LL | |
LL | |
LL | |     let mut a = 0usize;
   | |     ------------------- non-asm is unsupported in naked functions
LL | |     let mut b = 0usize;
   | |     ------------------- non-asm is unsupported in naked functions
LL | |     let mut c = 0usize;
   | |     ------------------- non-asm is unsupported in naked functions
LL | |     let mut d = 0usize;
   | |     ------------------- non-asm is unsupported in naked functions
LL | |     let mut e = 0usize;
   | |     ------------------- non-asm is unsupported in naked functions
...  |
LL | |     );
LL | | }
   | |_^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:84:1
   |
LL | / pub extern "C" fn missing_assembly() {
LL | |
LL | |
LL | | }
   | |_^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm in naked functions must use `noreturn` option
  --> $DIR/naked-functions.rs:93:5
   |
LL |     asm!("");
   |     ^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm in naked functions must use `noreturn` option
  --> $DIR/naked-functions.rs:96:5
   |
LL |     asm!("");
   |     ^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm in naked functions must use `noreturn` option
  --> $DIR/naked-functions.rs:99:5
   |
LL |     asm!("");
   |     ^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:90:1
   |
LL | / pub extern "C" fn too_many_asm_blocks() {
LL | |
LL | |
LL | |     asm!("");
...  |
LL | |     asm!("");
   | |     -------- multiple asm blocks are unsupported in naked functions
...  |
LL | |     asm!("");
   | |     -------- multiple asm blocks are unsupported in naked functions
...  |
LL | |     asm!("", options(noreturn));
   | |     --------------------------- multiple asm blocks are unsupported in naked functions
LL | | }
   | |_^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

error: referencing function parameters is not allowed in naked functions
  --> $DIR/naked-functions.rs:110:11
   |
LL |         *&y
   |           ^
   |
   = help: follow the calling convention in asm block to use parameters

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:107:5
   |
LL | /     pub extern "C" fn inner(y: usize) -> usize {
LL | |
LL | |
LL | |         *&y
   | |         --- non-asm is unsupported in naked functions
LL | |
LL | |     }
   | |_____^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: the LLVM-style inline assembly is unsupported in naked functions
  --> $DIR/naked-functions.rs:120:5
   |
LL |     llvm_asm!("");
   |     ^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>
   = help: use the new asm! syntax specified in RFC 2873
   = note: this warning originates in the macro `llvm_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: naked functions must contain a single asm block
  --> $DIR/naked-functions.rs:117:1
   |
LL | / unsafe extern "C" fn llvm() -> ! {
LL | |
LL | |
LL | |     llvm_asm!("");
...  |
LL | |     core::hint::unreachable_unchecked();
   | |     ------------------------------------ non-asm is unsupported in naked functions
LL | | }
   | |_^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm options unsupported in naked functions: `nomem`, `preserves_flags`
  --> $DIR/naked-functions.rs:128:5
   |
LL |     asm!("", options(nomem, preserves_flags, noreturn));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm options unsupported in naked functions: `nostack`, `pure`, `readonly`
  --> $DIR/naked-functions.rs:135:5
   |
LL |     asm!("", options(readonly, nostack), options(pure));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: asm in naked functions must use `noreturn` option
  --> $DIR/naked-functions.rs:135:5
   |
LL |     asm!("", options(readonly, nostack), options(pure));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: Rust ABI is unsupported in naked functions
  --> $DIR/naked-functions.rs:144:15
   |
LL | pub unsafe fn default_abi() {
   |               ^^^^^^^^^^^
   |
   = note: `#[warn(undefined_naked_function_abi)]` on by default

warning: Rust ABI is unsupported in naked functions
  --> $DIR/naked-functions.rs:150:15
   |
LL | pub unsafe fn rust_abi() {
   |               ^^^^^^^^

warning: naked functions cannot be inlined
  --> $DIR/naked-functions.rs:190:1
   |
LL | #[inline]
   | ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions cannot be inlined
  --> $DIR/naked-functions.rs:198:1
   |
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions cannot be inlined
  --> $DIR/naked-functions.rs:206:1
   |
LL | #[inline(never)]
   | ^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions cannot be inlined
  --> $DIR/naked-functions.rs:214:1
   |
LL | #[inline]
   | ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions cannot be inlined
  --> $DIR/naked-functions.rs:217:1
   |
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

warning: naked functions cannot be inlined
  --> $DIR/naked-functions.rs:220:1
   |
LL | #[inline(never)]
   | ^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #32408 <https://github.com/rust-lang/rust/issues/32408>

error: aborting due to 8 previous errors; 25 warnings emitted

